<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdivinaNumero">

    <!-- Mostrar el nombre del jugador -->
    <TextView
        android:id="@+id/txtNombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namePlayer"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Caja de texto para ingresar el intento -->
    <EditText
        android:id="@+id/inputIntento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingresaIntento"
        android:inputType="number"
        android:textSize="18sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtNombreJugador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Botón para enviar el intento -->
    <Button
        android:id="@+id/btnEnviarIntento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enviarIntento"
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/inputIntento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Mostrar el resultado del intento -->
    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnEnviarIntento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Texto para mostrar los intentos anteriores -->
    <TextView
        android:id="@+id/txtIntentosAnteriores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/intentosAnteriores"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Botón para reiniciar el juego -->
    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnReiniciar"
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtIntentosAnteriores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnRegresarIncio"
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnReiniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
