<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JugarGolpeado">

    <!-- Mostrar el nombre del jugador -->
    <TextView
        android:id="@+id/txtNombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namePlayer"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <!-- Mostrar el número de jugadores -->
    <TextView
        android:id="@+id/txtNumeroJugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberPlayers"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/txtNombreJugador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón para generar cartas -->
    <Button
        android:id="@+id/btnGenerarCartas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generarCartas"
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtNumeroJugadores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Texto para mostrar las cartas generadas -->
    <TextView
        android:id="@+id/txtCartasGeneradas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cartasGeneradas"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnGenerarCartas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/regresarIncio"
        android:textSize="16sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtCartasGeneradas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
