<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/welcome"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingresaNombre"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/btnAdivinaNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adivinaNumero"
        android:textSize="16sp"
        android:padding="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btnJugarGolpeado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/jugarGolpeado"
        android:textSize="16sp"
        android:padding="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnAdivinaNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/txtDesarrolladoPor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desarrollador"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnJugarGolpeado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
